--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,5 @@
 description: "My exploration of tools for image processing and analysis."
+collections:
+- notebooks
+- python-scripts
+- imagej-scripts
